--- a/src/design/theme.less
+++ b/src/design/theme.less
@@ -66,7 +66,7 @@ html[data-theme='light'] {
       color: @text-color-base;
 
       &:hover {
-        color: @button-primary-hover-color;
+        color:"#009688";
       }
     }
 
