--- a/src/design/index.less
+++ b/src/design/index.less
@@ -6,6 +6,10 @@
 @import 'theme.less';
 @import 'entry.css';
 
+.ant-radio-group div[aria-hidden=true] {
+  display: none !important;
+}
+
 input:-webkit-autofill {
   box-shadow: 0 0 0 1000px transparent inset;
   -webkit-text-fill-color: @text-color-base;
